tests/snapshots/cli__add_local.snap
---
source: tests/cli.rs
expression: "sandbox.taco(&[\"add\", \"--local\", \"build\", \"--\", \"echo\", \"local-build\"])"
snapshot_kind: text
---
exit code: 0
----- stdout -----
Aliased "build" to "echo local-build" in <root>/project/.taco.json
