tests/snapshots/cli__add_local_file.snap
---
source: tests/cli.rs
expression: sandbox.local_config_contents()
snapshot_kind: text
---
{
  "commands": {
    "build": "echo local-build"
  }
}
