tests/snapshots/cli__add_local_shadowed_runs.snap
---
source: tests/cli.rs
expression: "sandbox.taco(&[\"build\"])"
snapshot_kind: text
---
exit code: 0
----- stdout -----
personal-build
