tests/snapshots/cli__aliased_project_inherited.snap
---
source: tests/cli.rs
expression: "sandbox.taco_in(&sandbox.nested(), &[\"tdd\"])"
---
exit code: 0
----- stdout -----
vitest-tdd
