tests/snapshots/cli__broken_local_config_add_still_works.snap
---
source: tests/cli.rs
expression: "sandbox.taco(&[\"add\", \"greet\", \"--\", \"echo\", \"hello\"])"
snapshot_kind: text
---
exit code: 0
----- stdout -----
Aliased "greet" to "echo hello" in <root>/project
