tests/snapshots/cli__builtin_via_namespace.snap
---
source: tests/cli.rs
expression: "sandbox.taco(&[\"taco\", \"print\"])"
---
exit code: 0
----- stdout -----
Available commands:

<root>/project
  └─ taco print (shadows the builtin)
     echo MY-PRINT

1 command
