tests/snapshots/cli__config_edit_again.snap
---
source: tests/cli.rs
expression: "sandbox.taco_config(&fixer, \"e\\n\")"
snapshot_kind: text
---
exit code: 0
----- stdout -----
Invalid config file: <root>/taco.json: key must be a string at line 1 column 2

What now? (e)dit again / (r)estore previous config / (k)eep it broken
