tests/snapshots/cli__config_file_contents.snap
---
source: tests/cli.rs
expression: sandbox.config_contents()
---
{
  "aliases": {},
  "projects": {
    "<root>/project": {
      "greet": "echo hello"
    }
  }
}
